--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5" lang="en">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -30,6 +30,11 @@
 <div class="row no-gutters flex-grow-1">
     <div class="col-md-2 pr-0">
         <ul class="nav flex-column nav-pills">
+            <li class="nav-item">
+                <div sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a class="nav-link" href="/admin">Admin</a>
+                </div>
+            </li>
             <li class="nav-item">
                 <a class="nav-link active" href="/user">User</a>
             </li>
